Nautilus 42 beta keeps loading a folder with a lot of videos
I have a folder with 1145 movies. It worked fine with Nautilus until Debian updated it to 42.beta: now there is some kind of regression, because if I open it with thumbnails enabled, the CPU goes 100% and never stops. Clicking on any file or folder does nothing for some seconds, and only then shows a window indicating that the open operation is in progress and that I can cancel it.
If I disable the thumbnails, everything works as expected.
Tested with the last version of "gnome-42" branch.
Edited by Rastersoft